カテゴリーの情報も返すようにした
